--- a/tomas_ontwikkeling.html
+++ b/tomas_ontwikkeling.html
@@ -79,7 +79,8 @@
             <p> Gedurende deze minor ben ik continue bezig geweest met mijn persoonlijke groei, ik wilde nieuwe dingen leren buiten mijn expertise en hoe deze 
                 toe te passen zijn in mijn eigen werkveld. Onderweg naar dit doel ben ik mijn sterke eigenschappen, maar ook mijn zwakke eigenschappen 
                 tegengekomen. Ik heb geleerd om op deze eigenschappen te reflecteren en vervolgens hier ook aan te werken. Zo is het gedurende deze minor wederom
-                gebleken dat het spreken en presenterend vermogen van mij redelijk goed is, toch heb ik het idee dat deze eigenschap zich verder heeft ontwikkeld.
+                gebleken dat het spreken en presenterend vermogen van mij redelijk goed is, toch heb ik het idee dat deze eigenschap zich verder heeft 
+                ontwikkeld.
                 Een groot deel van de minor is het presenteren van je meningen of ondervindingen. In de eerste les stonden alle leerlingen al een keer voor de 
                 klas, in het begin was ik daar nog een klein beetje zenuwachtig voor en aan het eind van de minor vind ik het totaal niet meer vervelend of 
                 spannend. De groei in deze eigenschap gaat zeker van pas komen bij het afstuderen maar ook in de verder loop van mijn carriére. 
