toevoeging AXA oplossing

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -55,9 +55,18 @@
                     </p>
                     <img class="logo" src="images/BMI van AXA.jpg" alt="BMI van AXA" width="300" height="200"> 
                    
-                    <p> 2e kopje
+                    <p> Nadat we met het groepje het BMC hadden opgesteld en gepresenteerd, zijn we verder gegaan om met alle feedback en missende delen die we hebben gekregen van de andere klasgenoten en optimalisatiemogelijkheden te zoeken.
+                        Deze optimalisatie moest worden gezocht door middel van alle BMC-factoren en implementatie van digitalisering.
+                        De focus hadden wij gelegd op waarde propositie en kernmiddelen.
+                        We zijn met het groepje gaan brainstormen en zijn uiteindelijk na een paar factoren te hebben afgewogen uitgekomen bij het implementeren van een chip in de auto's.
+                        Hier zijn we bij gekomen omdat we dachten aan een black box in een vliegtuig die ook ongemerkt van alles registreert.
+                        De factoren die de chip onder andere zou kunnen waarnemen en opslaan zijn snelheidsovertredingen, bochtsnelheid, rijgedrag en aanwezigheid op de weg.
+                        Door deze chips toe te passen in de auto's brengt dit met zich mee dat AXA de premie van een bestuurder proactief kan aanpassen wanneer iemand van mening is dat de bestuurder gevaarlijk rijdt.
+                        Dit kan natuurlijk ook de andere kant op zijn, en dat dus zo de premie ook verlaagd kan worden wanneer de bestuurder voorzichtig rijdt. 
                     </p>
-                    <p> 3e kopje
+                    <p> Nadat iedereen van het groepje scherp had wat het idee was en welke voordelen eraan zaten, konden we zo het whiteboard voorbereiden om ons idee te gaan pitchen aan de rest van de klas.
+                        Onze Smartbox hebben we visueel gepresenteerd d.m.v. een ondersteuning van een tekening met daarbij verschillende kernwoorden die ons verhaal versterkten.
+                        Hieronder staat een foto weergegeven die is gemaakt van dit whiteboard.
                     </p>
                     <img class="logo" src="images/Smartbox AXA.jpg" alt="Smartbox" width="300" height="200"> 
 
