aanpassing tekst hieke

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -35,7 +35,8 @@
                     In de eerste les werd uitgelegd dat we in groepen van vier een connectie moesten leggen tussen de verschillende video's.
                     Hierdoor ontstond een puzzel waarbij we moesten bepalen welke puzzelstukjes van de filmpjes in elkaar pasten waardoor je alle filmpjes connect.
                     Nadat we deze puzzel hadden gelegd en op een whiteboard hadden uitgebeeld, moesten we deze aan elkaar pitchen.
-                    Elke groep dacht mee en stelde vragen over waarom wij dachten dat er een connectie lag (figuur...).
+                    Elke groep dacht mee en stelde vragen over waarom wij dachten dat er een connectie lag.
+                    Hieornder zie je de afbeelding van het whiteboard waar wij onze connectie op hebben gepresenteerd met tekenignen en kernwoorden.
                     </p>
                     <p> 2e kopje
                     </p>
