tekst toegevoegd aan workshop hieke

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -72,7 +72,12 @@
                     <img class="logo" src="images/Smartbox AXA.jpg" alt="Smartbox" width="300" height="200"> 
 
                  <h4>BMC van Giesbers</h4>
-                    <p> 1e kopje
+                    <p> In aanvulling op het Business Model Canvas (BMC) van AXA, hebben mijn projectgroep en ik een BMC opgesteld voor het bedrijf waarvoor we op dat moment een onderzoek uitvoerden, namelijk Giesbers.
+                        Voor mijn groep en mij was het BMC nog erg nieuw, dus hebben we met de kennis van de les ervoor en door wat extra informatie op te zoeken het BMC goed kunnen opstellen.
+                        Dit deden we met het doel om een diepgaand inzicht te verkrijgen in de operationele werkwijze en de algemene structuur van Giesbers.
+                        We kwamen daar namelijk binnen met heel weinig kennis van het bedrijf en nog geen begrip van hoe ze daar onder elkaar te werk gaan.
+                        Hieronder is het resulterende BMC-model voor Giesbers weergegeven, wat ons heeft geholpen om de verschillende aspecten van het bedrijf te analyseren en beter te begrijpen.
+                        Zo hebben we een goede start kunnen maken aan onze opdracht bij Giesbers.
                     </p>
                     <iframe src="files/business-model-canvas Giesbers.pdf" name="business-model-canvas Giesbers">
                         <p>Deze browser ondersteunt geen iFrames.</p>
