tekstueele toelichting workshop hieke

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -167,23 +167,10 @@
                         Echter, het is wel teleurstellend dat het me niet gelukt is om het volledige systeem operationeel te krijgen voor gebruik in een plant thuis.
                     </p>
 
-                <h5>onderwerp</h5>
-                    <div class="fakeimg" style="height:200px;">Image</div>
-                    <p>1e kopje
-                    </p>
-                    <p> 2e kopje
-                    </p>
-
-                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
-                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
-                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
-                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
-                    <img class="logo" src="link" alt="naam" width="300" height="200"> 
-
             <h2>Smart Connection</h2>
                 <p> Inleiding
                 </p>
-                <h4>onderwerp</h4>
+                <h4>HTML en CSS</h4>
                     <p> Tijdens de Smart Connection-les ben ik buiten mijn eigen vakgebied getreden en heb ik kennis gemaakt met HTML.
                         Dit aspect staat haaks op mijn technische studie, wat mijn interesse in dit onderdeel van de minor heeft aangewakkerd.
                         In de allereerste les slaagde ik er al in om een website aan te passen door video's en foto's toe te voegen, en tekst te wijzigen in grootte en dikte.
