eigen site toevoegen

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -178,7 +178,7 @@
                         Deze ervaring heeft mijn begrip van het bouwen van websites aanzienlijk vergroot.
                     </p>
                     <p> In de onderstaande link is de door mij gemaakte site weergegeven:</p>
-                    <p><a href="link toevoegen">Site les 1</a></p>
+                    <p><a href="link toevoegen">Eigen site</a></p>
 
                 <h4>onderwerp</h4>
                     <p> 1e kopje
