site toevoegen hieke

--- a/Hieke/Eigen site/Eigen site.html
+++ b/Hieke/Eigen site/Eigen site.html
@@ -44,13 +44,15 @@
          The text between the <video> and </video> tags will only be displayed in browsers that do not support the <video> element.
       -->
       <!-- Video link naar youtube-->
-      <iframe width="930" 
-      height="523" 
-      src="https://youtu.be/A7thBilOLFU?si=tBU9J30XURrOys0l" 
-      title="POWER HOUR 2023 | Defqon.1 Weekend Festival | This is Madness" 
+      <iframe width="560" 
+      height="315" 
+      src="https://www.youtube.com/embed/A7thBilOLFU?si=bmK2KVfQHh7NNh9e" 
+      title="YouTube video player" 
       frameborder="0" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-      allowfullscreen></iframe>
+      allowfullscreen> 
+   </iframe>" 
+
 
       <!-- This is comment
          Een video insluiten
