naam aagepast hieke

--- a/Hieke/Eigen site/Eigen site.html
+++ b/Hieke/Eigen site/Eigen site.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>
-         My Hello wold
+         My Hello wold hieke
       </title>
       <link rel="stylesheet" type="text/css" href="Les 1.css">
    </head>
